cmake_minimum_required(VERSION 3.20)
project(c-pl-github-classroom-template C)

set(CMAKE_C_STANDARD 11)

add_executable(binary binary.c)
add_executable(insertion-sort insertion-sort.c)
add_executable(josephus josephus.c)
add_executable(mines mines.c)
add_executable(palindrome palindrome.c)
add_executable(series series.c)
add_executable(sudoku sudoku.c)